--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
     "serve": "vite preview"
   },
   "devDependencies": {
+    "eslint": "^8.3.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "prettier": "2.5.0",
     "sass": "^1.43.5",
     "vite": "^2.6.4"
+    "vite-plugin-eslint": "^1.3.0"
   }
 }
