--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vite-project",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
     "serve": "vite preview"
   },
@@ -14,5 +14,7 @@
     "sass": "^1.43.5",
     "vite": "^2.6.4"
     "vite-plugin-eslint": "^1.3.0"
+    "vite-plugin-eslint": "^1.3.0",
+    "vite-plugin-live-reload": "^2.1.0"
   }
 }
