--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "2.5.0",
     "sass": "^1.43.5",
-    "vite": "^2.6.4"
-    "vite-plugin-eslint": "^1.3.0"
+    "vite": "^2.6.4",
+    "vite-fs": "^0.0.2",
     "vite-plugin-eslint": "^1.3.0",
     "vite-plugin-live-reload": "^2.1.0"
+  },
+  "dependencies": {
+    "lazysizes": "^5.3.2",
+    "what-input": "^5.2.10"
   }
 }
